# hpc

./: .gitignore  Makefile  README.md  mm.c  mmo.c  pollux.c  pollux.h
parcial/Informe/: .paper.tex.swp  .~lock.Resultados.ods#  Resultados.ods  paper.tex
parcial/Sobel/: CMakeLists.txt  compartida.cu  constante.cu  global.cu  results_compartida.txt  results_constante.txt  results_global.txt  results_secuencial.txt  run.sh  secuencial.cpp
